@@ -2,6 +2,10 @@ $Id$
 
 v0.39.9		29-Jan-2004
 
+	mbcico:
+		Added experimental code for telnet outbound connections. This
+		code is not compiled by default so don't worry or bother.
+
 
 v0.39.8		26-Jan-2004 - 29-Jan-2004
 
